cabal-version: 2.4
name:          frag
version:       1.1.2
license-file:  LICENSE
synopsis:      A 3-D First Person Shooter Game
description:
  A fast and basic reimplementation of the Quake III Arena engine
  in Haskell; supports many Quake III Arena maps.
category:      Game
author:        Mun Hon Cheong
maintainer:    dons@galois.com
homepage:      http://haskell.org/haskellwiki/Frag
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.2
data-files:
  README.md
  README-leveleg
  leveleg.bsp
  leveleg.cfg
  leveleg.med
  tga/**/*.skin
  tga/**/*.md3
  tga/**/*.tga
  tga/models/players/klesk/animation.cfg
  tga/models/weapons/railgun.shader

common common
  build-depends:
    , base        >=4.12 && <4.15
    , deepseq     ^>=1.4
    , GLUT        ^>=2.7
    , hashtables  ^>=1.2
    , OpenGL      ^>=3.0
    , Yampa       ^>=0.13

  ghc-options:        -Wall -funbox-strict-fields
  default-language:   Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , array                ^>=0.5
    , simple-affine-space  ^>=0.1

  -- cabal-fmt: expand src -ReadImage -RenderObject
  exposed-modules:
    BitSet
    BSP
    Camera
    Collision
    Command
    Curves
    Diagnostics
    Frustum
    Game
    HGL
    IdentityList
    MapCfg
    Matrix
    MD3
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    Quaternion
    Raybox
    Render
    TextureFonts
    Textures
    TGA
    Visibility

executable frag
  import:        common
  main-is:       app/Main.hs
  build-depends: frag
  ghc-options:   -O2 -optc-O2
